# variational_hydrology

./: .gitignore  LICENSE  README.md  do_post.sh  do_runs.sh  pyproject.toml
dashboard/: app.py  data.csv  generate_data_file.py  requirements.txt
data/basin_ids/: basins_camels_gb_671.txt  basins_camels_us_10.txt  basins_camels_us_5.txt  basins_camels_us_60.txt
examples/: vae.html
information_hydrology/modelzoo/: cudalstm.py  lstmgmm.py  vlstm.py
information_hydrology/utils/: loss_fn.py  metrics.py  miscellaneous.py
scripts/: calc-ensemble-nse.py  calc-reliability-benchmark.py  calc-reliability.py  calculate_metrics.py  config_data.yml  postprocess.py  postprocessing.py  train_gmmlstm.py  train_lstm-gmm.py  train_lstm.py  train_mdn.py  train_noisylstm.py  train_vlstm.py  training_animation.py
src/information_hydrology/modelzoo/: cudalstm.py  lstmgmm.py  mdn.py  noisylstm.py  vlstm.py
src/information_hydrology/utils/: distributions.py  logging.py  loss_fn.py  metrics.py  miscellaneous.py  training.py
