[tool.poetry]
name = "information-hydrology"
version = "0.1.0"
description = "Library for the development of hydrological rainfall-runoff models using Information Theory."
authors = ["Manuel Álvarez Chaves <manuel.alvarez-chaves@simtech.uni-stuttgart.de>"]
license = "GPL-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.1"
llvmlite = "^0.43.0"
numba = "^0.60.0"
neuralhydrology = "^1.11.0"
xarray = {extras = ["io"], version = "^2024.9.0"}
pandas = "^2.2.3"
tqdm = "^4.66.5"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.5"
numpy = "2.0.2"
matplotlib = "^3.9.2"
scipy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
