[project]
name = "information-hydrology"
version = "0.1.0"
description = "Library for the development of hydrological rainfall-runoff models using Information Theory."
readme = "README.md"
authors = [
    {name = "Manuel Álvarez Chaves", email = "manuel.alvarez-chaves@simtech.uni-stuttgart.de"},
]
license = {text = "MIT"}
requires-python = ">=3.10, <4.0"
dependencies = [
    "torch>=2.5.1",
    "numpy==2.0.2",
    "llvmlite==0.43.0",
    "numba>=0.60.0",
    "tqdm>=4.67.1",
    "xarray[io]>=2024.11.0",
    "neuralhydrology>=1.11.0",
    "unite-toolbox>=0.1.9",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.8.1",
    "scipy>=1.14.1",
    "pandas>=2.2.3",
    "matplotlib>=3.9.3",
    "seaborn>=0.13.2",
    "ipykernel>=6.29.5",
    "scienceplots>=2.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
